# AOC2023

./: Cargo.toml  justfile
daily-template/: Cargo.toml
daily-template/src/: lib.rs  part1.rs  part2.rs
day01/: Cargo.toml
day01/src/: lib.rs  part1.rs  part2.rs
day02/: Cargo.toml
day02/src/: lib.rs  part1.rs  part2.rs
day03/: Cargo.toml
day03/benches/: benchmarks.rs
day03/src/: lib.rs  part1.rs  part2.rs
day04/: Cargo.toml
day04/src/: lib.rs  part1.rs  part2.rs
day05/: Cargo.toml
day05/src/: lib.rs  part1.rs  part2.rs
day06/: Cargo.toml
day06/src/: part1.rs  part2.rs
day07/: Cargo.toml
day07/src/: lib.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: part1.rs  part2.rs
day09/: Cargo.toml
day09/src/: part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: part1.rs  part2.rs
