[workspace]
resolver = "2"

members = ["day*"]


[workspace.dependencies]
# vector/matrix library
glam = "0.24.2"
# iteration helpers
itertools = "0.12.0"
# parsing
nom = "7.1.3"
nom-supreme = "0.8.0"
# graph library
petgraph = "0.6.4"
# parrallelism
rayon = "1.8.0"
# inline string literals
indoc = "2.0.4"
# benchmarking
divan = "0.1.4"
indicatif = { version = "0.17.7", features = ["rayon"] }
