[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
indoc = { workspace = true }
nom = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
divan = { workspace = true }


[[bench]]
name = "day03"
path = "benches/benchmarks.rs"
harness = false
